trab/2/test/should_fail/sintatico04.py
for x in 4:
    print("a")